fix overflow & particle shape

--- a/src/styles/partials/index.scss
+++ b/src/styles/partials/index.scss
@@ -1,3 +1,7 @@
+body {
+	overflow: hidden;
+}
+
 #timer {
 	width: 200px;
 	height: 30px;
